@@ -35,6 +35,7 @@ public enum VerificationErrorCode {
     INT_07("INT-07", "Calendar hash chain time inconsistent with publication time"),
     INT_08("INT-08", "Calendar hash chain root has inconsistent with calendar auth record time"),
     INT_09("INT-09", "Calendar hash chain root has inconsistent with publication time"),
+    INT_11("INT-11", "Invalid legacy meta-data format"),
     PUB_01("PUB-01", "Extender response calendar root hash mismatch"),
     PUB_02("PUB-02", "Extender response inconsistent"),
     PUB_03("PUB-03", "Extender response input hash mismatch"),
